@@ -15,6 +15,7 @@ Bug Fixes::
 
 * place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
 * accurately trap LoadError from CodeRay if source language is not recognized on code block
+* only draw rounded rectangle around phrase if `border-radius` is > 0
 
 == 2.1.0 (2022-06-11) - @mojavelinux
 
